# OPT_tumourmodels

./: .gitignore  Automatic_measurements.py  CODEOWNERS  Example.ipynb  Eye_example.stl  Generate_tumour_model.py  Model_evaluation.py  Prepare_base.py  README.docx  README.md  Tumour_example.stl  pyproject.toml  requirements.txt
